<resources>
    <string name="app_name">test</string>
    <string name="name">Ivanov.I</string>
    <string name="pass">******</string>
    <string name="sign_in">Sign In</string>
    <string name="mail">ivanov@gmail.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_menus">Menus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_history">History</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu">Menu</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
</resources>